--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -34,8 +34,8 @@
             user@TempSpace.com
         </button>
         <div class="dropdown-menu bg-light " aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item text-primary" href="user_settings.html">User Settings</a>
-            <a class="dropdown-item text-primary" href="account_settings.html">Account Settings</a>
+            <a class="dropdown-item text-primary" href="#">User Settings</a>
+            <a class="dropdown-item text-primary" href="#">Account Settings</a>
             <div class="dropdown-divider bg-primary"></div>
             <a class="dropdown-item text-primary" href="../index.html">Log out</a>
         </div>
