--- a/website/index.html
+++ b/website/index.html
@@ -12,12 +12,14 @@
     <link href="css/index.css" rel="stylesheet">
 </head>
 
-<body class="bg-primary">
+<body>
 
 
+
+<div id="bg_div_1" class="bg-transparent">
 <div class="container">
 
-    <nav class="navbar navbar-light bg-transparent text-light justify-content-between" id="nav_bar">
+    <nav class="navbar bg-transparent text-light justify-content-between" id="nav_bar">
         <a class="navbar-brand">TempSpace</a>
 
 
@@ -28,36 +30,133 @@
             <div class="input-group">
                 <input type="text" id="password_input" class="form-control form-control-sm bg-light" placeholder="Password" aria-label="Password">
             </div>
-            <button type="button" class="btn btn-outline-secondary btn-sm">Login</button>
+            <button type="button" onclick="on_login_click()" class="btn btn-outline-light btn-sm">Login</button>
         </form>
-
-
-
 
     </nav>
 
 
 
-    <div class="jumbotron bg-transparent">
-        <h1 class="display-3">Hello, world!</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-        <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    <div class="jumbotron bg-transparent " id="jumbotron">
+        <h1 class="display-6 text-light">TempSpace</h1>
+        <p class="lead text-light">The best temperature monitoring system in the world</p>
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+            <a class="btn btn-light btn-lg text-primary" href="#bg_div_4"  role="button">Buy Now!</a>
         </p>
     </div>
 
+</div>
+</div>
 
 
+<div id="bg_div_2" class="bg-light">
+<div class="container">
+
+    <div class="jumbotron bg-transparent" id="jumbotron2">
+        <h1 class="display-6 text-primary">Automatic Reporting</h1>
+        <p class="lead text-primary">Dont fill out reports yourself, let our system do it for you... automatically</p>
+
+    </div>
 
 
+</div>
+</div>
+
+<div id="bg_div_3" class="bg-transparent">
+    <div class="container">
+
+        <div class="jumbotron bg-transparent" id="jumbotron3">
+            <h1 class="display-6 text-light">Real Error Detection</h1>
+            <p class="lead text-light">Dont rely on archaic detection techniques, get advanced predections with tempspace</p>
+
+
+        </div>
+
+
+    </div>
+</div>
+
+
+<div id="bg_div_4" class="bg-light">
+
+    <div class="row">
+
+        <div class="col-sm-4">
+
+            <div class="card text-center">
+
+
+                <div class="card-body">
+                    <h6 class="card-title ">Small</h6>
+                    <h2 class="card-title text-primary">$10 p/m</h2>
+                    <p class="card-text ">For small business</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Support for up to 5 sensors</li>
+                    <li class="list-group-item">Basic customer suport</li>
+                    <li class="list-group-item">We can tolerate you</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="btn btn-primary">Buy Now!</a>
+                </div>
+
+
+            </div>
+        </div>
+        <div class="col-sm-4">
+
+            <div class="card text-center">
+
+
+                <div class="card-body">
+                    <h6 class="card-title ">Medium</h6>
+                    <h2 class="card-title text-primary">$50 p/m</h2>
+                    <p class="card-text ">For bigger business</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Support for up to 20 sensors</li>
+                    <li class="list-group-item">Better customer suport</li>
+                    <li class="list-group-item">We like you slightly better</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="btn btn-primary">Buy Now!</a>
+                </div>
+
+
+            </div>
+        </div>
+        <div class="col-sm-4">
+
+            <div class="card text-center">
+
+
+                <div class="card-body">
+                    <h6 class="card-title ">Medium</h6>
+                    <h2 class="card-title text-primary">$500 p/m</h2>
+                    <p class="card-text ">For the biggest business</p>
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Support for up to 10,000 sensors</li>
+                    <li class="list-group-item">Priority customer suport</li>
+                    <li class="list-group-item">We like you the best</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="btn btn-primary">Buy Now!</a>
+                </div>
+
+
+            </div>
+        </div>
+
+    </div>
 
 </div>
 
 
 
-
+<div id="bg_div_5" class="bg-dark text-light">
+    <p>#interns2017</p>
+</div>
 
 
 
