--- a/website/index.html
+++ b/website/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="icons/twitter_mark.png">
+    <link rel="icon" href="http://ec2-52-87-157-17.compute-1.amazonaws.com/website_images/twitter_mark.png">
     <title>#Interns2017</title>
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- My css below -->
@@ -17,7 +17,7 @@
 
 
 <div id="bg_div_1" class="bg-transparent">
-<div class="container">
+<div class="container_custom">
 
     <nav class="navbar bg-transparent text-light justify-content-between" id="nav_bar">
         <a class="navbar-brand">TempSpace</a>
@@ -50,7 +50,7 @@
 
 
 <div id="bg_div_2" class="bg-light">
-<div class="container">
+<div class="container_custom">
 
     <div class="jumbotron bg-transparent" id="jumbotron2">
         <h1 class="display-6 text-primary">Automatic Reporting</h1>
@@ -63,11 +63,11 @@
 </div>
 
 <div id="bg_div_3" class="bg-transparent">
-    <div class="container">
+    <div class="container_custom">
 
         <div class="jumbotron bg-transparent" id="jumbotron3">
             <h1 class="display-6 text-light">Real Error Detection</h1>
-            <p class="lead text-light">Dont rely on archaic detection techniques, get advanced predections with tempspace</p>
+            <p class="lead text-light">Dont rely on archaic detection techniques, get advanced predictions with tempspace</p>
 
 
         </div>
@@ -137,7 +137,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">Support for up to 10,000 sensors</li>
-                    <li class="list-group-item">Priority customer suport</li>
+                    <li class="list-group-item">Priority customer support</li>
                     <li class="list-group-item">We like you the best</li>
                 </ul>
                 <div class="card-body">
