--- a/website/index.html
+++ b/website/index.html
@@ -131,7 +131,7 @@
 
 
                 <div class="card-body">
-                    <h6 class="card-title ">Medium</h6>
+                    <h6 class="card-title ">Large</h6>
                     <h2 class="card-title text-primary">$500 p/m</h2>
                     <p class="card-text ">For the biggest business</p>
                 </div>
