--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -33,11 +33,11 @@
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             user@TempSpace.com
         </button>
-        <div class="dropdown-menu bg-light " aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item text-primary" href="#">User Settings</a>
-            <a class="dropdown-item text-primary" href="#">Account Settings</a>
-            <div class="dropdown-divider bg-primary"></div>
-            <a class="dropdown-item text-primary" href="../index.html">Log out</a>
+        <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#">User Settings</a>
+            <a class="dropdown-item" href="#">Account Settings</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="../index.html">Log out</a>
         </div>
     </div>
 </nav>
