--- a/website/index.html
+++ b/website/index.html
@@ -38,7 +38,7 @@
 
 
     <div class="jumbotron bg-transparent " id="jumbotron">
-        <h1 class="display-6 text-light">TempSpace</h1>
+        <h1 class="display-4 text-light">TempSpace</h1>
         <p class="lead text-light">The best temperature monitoring system in the world</p>
         <p class="lead">
             <a class="btn btn-light btn-lg text-primary" href="#bg_div_4"  role="button">Buy Now!</a>
@@ -67,7 +67,7 @@
 
         <div class="jumbotron bg-transparent" id="jumbotron3">
             <h1 class="display-6 text-light">Real Error Detection</h1>
-            <p class="lead text-light">Dont rely on archaic detection techniques, get advanced predictions with tempspace</p>
+            <p class="lead text-light">Dont rely on archaic detection techniques, get advanced predictions with TempSpace</p>
 
 
         </div>
