--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -99,8 +99,8 @@
             </div>
         </div>
     </div>
-</div>
 
+<div id="loader"></div>
 
 <script src="../js/incidents.js"></script>
 <!-- Bootstrap scripts -->
