--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -34,8 +34,7 @@
             user@TempSpace.com
         </button>
         <div class="dropdown-menu " aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">User Settings</a>
-            <a class="dropdown-item" href="#">Account Settings</a>
+            <a class="dropdown-item" href="user_settings.html">Settings</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="../index.html">Log out</a>
         </div>
