--- a/website/html/device_settings.html
+++ b/website/html/device_settings.html
@@ -65,15 +65,13 @@
         <!-- right side of page-->
         <div class="col" id="col8">
 
-            <form>
 
 
 
 
 
 
-
-                <a class="btn btn-primary" href="user_settings.html" role="button">Save</a>
+                <a class="btn btn-primary btn-sm" href="user_settings.html" role="button">Save</a>
             </form>
 
 
@@ -83,7 +81,7 @@
 </div>
 
 
-
+<script src="../js/settings.js"></script>
 <!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="bootstrap/assets/js/vendor/jquery.min.js"><\/script>')</script>
