--- a/website/html/incidents.html
+++ b/website/html/incidents.html
@@ -16,7 +16,7 @@
 <body class="bg-light">
 
 <!-- top page navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="nav_bar">
 
     <a class="navbar-brand" href="#">TempSpace</a>
 
@@ -46,7 +46,7 @@
     <div class="row">
 
         <!-- left side of page-->
-        <div class="col-2 bg-primary" id="col4">
+        <div class="col-2 bg-transparent" id="col4">
 
 
             <!-- Modal -->
