--- a/website/html/user_settings.html
+++ b/website/html/user_settings.html
@@ -65,6 +65,11 @@
         <!-- right side of page-->
         <div class="col" id="col8">
 
+            <div id="save_message">
+
+
+            </div>
+
 
             <form id="settings_form" class="">
                 <h4 id="form_title">User Settings:</h4>
@@ -133,7 +138,7 @@
                 </fieldset>
 
 
-                <a class="btn btn-primary btn-sm" id="save_button" href="user_settings.html" role="button">Save</a>
+                <a onclick="save_btn_click()" class="btn btn-primary btn-sm" id="save_button" href="#" role="button">Save</a>
             </form>
 
 
