--- a/website/html/reports.html
+++ b/website/html/reports.html
@@ -15,7 +15,7 @@
 
 <body class="bg-light">
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="nav_bar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-transparent" id="nav_bar">
 
     <a class="navbar-brand" href="#">TempSpace</a>
 
@@ -49,7 +49,7 @@
 
 
         <!-- left side of page-->
-        <div class="col-2 bg-primary" id="col4">
+        <div class="col-2 bg-transparent" id="col4">
 
             <!-- Modal -->
             <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
